Improve UI + add build configuration + docker compose